k8s/Job-service/job-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job
spec:
  replicas: 2
  selector:
    matchLabels:
      app: job
  template:
    metadata:
      labels:
        app: job
    spec:
      containers:
        - name: job
          # Change this image to your own image
          image: minamo0o2/scalabol:job-service
          ports:
            # Change this port to your own port
            - containerPort: 8081
          readinessProbe:
            httpGet:
              # make sure to put actuator in ur pom file
              path: /actuator/health # Ensure this endpoint exists and responds 200 OK when ready
              # Change this port to your own port
              port: 8081
            initialDelaySeconds: 30  # Wait 30 seconds before starting the first readiness check
            periodSeconds: 10  # Check readiness every 10 seconds
            timeoutSeconds: 5  # Timeout for each check
            successThreshold: 1  # One successful check to mark the pod as ready
            failureThreshold: 3
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "750m"
