k8s/Job-service/job-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: job
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: /actuator/prometheus
    prometheus.io/port: "8081"
spec:
  selector:
    app: job
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
