k8s/Job-service/job-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: job-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: scalabol.job
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: job
                port:
                  # The port number of the service to route traffic to (same as in deployment.yaml)
                  number: 8080
